package structural._5_bridge.engine;

public interface IEngine {
	void powerUp();
	void powerDown();
}
